@@ -1,0 +1,38 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.cassandra.metrics;
+
+import java.util.function.ToLongFunction;
+import java.util.stream.StreamSupport;
+
+import com.codahale.metrics.Counter;
+import com.codahale.metrics.Gauge;
+import org.apache.cassandra.db.Keyspace;
+
+import static org.apache.cassandra.metrics.CassandraMetricsRegistry.Metrics;
+
+/**
+ * Metrics related to Gossip.
+ */
+public class GossipMetrics
+{
+    private static final MetricNameFactory factory = new DefaultNameFactory("Gossip");
+    public static final Counter gossipAndStorageServiceCacheMismatch = Metrics.counter(factory.createMetricName("GossipAndStorageServiceCacheMismatch"));
+    public static final Counter gossipAndStorageServiceCacheRepair = Metrics.counter(factory.createMetricName("GossipAndStorageServiceCacheRepair"));
+    public static final Counter gossipAndStorageServiceCacheError = Metrics.counter(factory.createMetricName("GossipAndStorageServiceCacheError"));
+}
