@@ -2965,7 +2965,7 @@ public class StorageService extends NotificationBroadcasterSupport implements IE
             Gossiper.instance.addLocalApplicationState(ApplicationState.RPC_READY, valueFactory.rpcReady(value));
     }
 
-    private Collection<Token> getTokensFor(InetAddressAndPort endpoint)
+    public Collection<Token> getTokensFor(InetAddressAndPort endpoint)
     {
         try
         {
@@ -3078,7 +3078,7 @@ public class StorageService extends NotificationBroadcasterSupport implements IE
         }
     }
 
-    private void updateTokenMetadata(InetAddressAndPort endpoint, Iterable<Token> tokens)
+    public void updateTokenMetadata(InetAddressAndPort endpoint, Iterable<Token> tokens)
     {
         updateTokenMetadata(endpoint, tokens, new HashSet<>());
     }
