@@ -11,6 +11,7 @@ Merged from 3.11:
 Merged from 3.0:
  * Fix CQLSH online help topic link (CASSANDRA-17534)
  * Remove unused suppressions (CASSANDRA-18724)
+ * Detect token-ownership mismatch (CASSANDRA-18758)
 
 
 5.0
